--- a/index.html
+++ b/index.html
@@ -7,7 +7,9 @@
 <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Lato">
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 <style>
-body {font-family: "Lato", sans-serif}
+
+.title{margin:0px !important;word-wrap:break-word !important;font-family:Circular,-apple-system,BlinkMacSystemFont,Roboto,Helvetica Neue,sans-serif !important;font-size:30px !important;font-weight:800 !important;line-height:1.1578947368421053em !important;color:#484848 !important;}@media (min-width: 744px){._keicei4{font-size:30px !important;line-height:1.1304347826086956em !important;}}
+
 .mySlides {display: none}
 </style>
 <body>
@@ -17,7 +19,7 @@ body {font-family: "Lato", sans-serif}
 
   <!-- The Band Section -->
   <div class="w3-container w3-content w3-center w3-padding-64" style="max-width:800px" id="band">
-    <h2 class="w3-wide">Enter URL below</h2>
+    <h2 class="title">Enter URL below</h2>
        <input class="w3-input w3-border" type="text" placeholder="https://www.instagram.com/p/Bjn-mBknLf4/" required name="Message">
       </div>
     </div>
